# ft_fractol

./: CMakeLists.txt  Makefile  exe  fractol  main.c
sources/: ft_fractol.h  ft_img.c  ft_initialise.c  ft_julia.c  ft_keyhook.c  ft_mandelbrot.c  ft_mandelbrot_func1.c  ft_mandelbrot_func2.c  main.c
